# polkadot-stack-template

./: Cargo.toml  README.md  TOOLS.md  rust-toolchain.toml
blockchain/: chain_spec.json  docker-compose.yml
blockchain/pallets/template/: Cargo.toml
blockchain/pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
blockchain/runtime/: Cargo.toml  build.rs
blockchain/runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs  tests.rs
blockchain/runtime/src/configs/: mod.rs  xcm_config.rs
cli/src/commands/: chain.rs  mod.rs  pallet.rs
scripts/: README.md  common.sh  start-all.sh  start-dev-with-contracts.sh  start-dev.sh
web/.papi/: polkadot-api.json
web/.papi/descriptors/: generated.json
web/.papi/metadata/: stack_template.scale
web/src/hooks/: useStatementStore.ts
web/src/pages/: HomePage.tsx  PalletPage.tsx
