[workspace]
resolver = "2"
members = [
	"blockchain/runtime",
	"blockchain/pallets/template",
	"cli",
]

[workspace.package]
license = "MIT"
authors = ["Polkadot Stack Template Contributors"]
homepage = "https://github.com/parity-Asia/polkadot-stack-template"
repository = "https://github.com/parity-Asia/polkadot-stack-template.git"
edition = "2021"

[workspace.dependencies]
# Local crates
pallet-template = { path = "./blockchain/pallets/template", default-features = false }

# Common dependencies
codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
docify = { version = "0.2.9" }
hex-literal = { version = "0.4.1", default-features = false }
log = { version = "0.4.22", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde = { version = "1.0.214", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
smallvec = { version = "1.13.1", default-features = false }

# FRAME (experimental umbrella crate - used by pallets)
frame = { version = "0.14.0", default-features = false, package = "polkadot-sdk-frame" }

# Substrate / FRAME individual crates (matching runtimes repo versions)
frame-benchmarking = { version = "45.0.3", default-features = false }
frame-executive = { version = "45.0.1", default-features = false }
frame-metadata-hash-extension = { version = "0.13.0", default-features = false }
frame-support = { version = "45.1.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
frame-system-benchmarking = { version = "45.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0.0", default-features = false }
frame-try-runtime = { version = "0.51.0", default-features = false }

# Substrate pallets
pallet-aura = { version = "44.0.0", default-features = false }
pallet-authorship = { version = "45.0.0", default-features = false }
pallet-balances = { version = "46.0.0", default-features = false }
pallet-collator-selection = { version = "26.0.0", default-features = false }
pallet-message-queue = { version = "48.0.0", default-features = false }
pallet-revive = { version = "0.12.2", default-features = false }
pallet-session = { version = "45.2.0", default-features = false }
pallet-sudo = { version = "45.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
pallet-transaction-payment = { version = "45.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "45.0.0", default-features = false }
pallet-xcm = { version = "25.0.0", default-features = false }

# Substrate primitives
sp-api = { version = "40.0.0", default-features = false }
sp-block-builder = { version = "40.0.0", default-features = false }
sp-consensus-aura = { version = "0.46.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-genesis-builder = { version = "0.21.0", default-features = false }
sp-inherents = { version = "40.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-keyring = { version = "45.0.0" }
sp-offchain = { version = "40.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-transaction-pool = { version = "40.0.0", default-features = false }
sp-version = { version = "43.0.0", default-features = false }
sp-weights = { version = "33.2.0", default-features = false }
substrate-wasm-builder = { version = "31.1.0" }

# Cumulus (parachain support)
cumulus-pallet-aura-ext = { version = "0.25.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.25.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "26.0.0", default-features = false }
cumulus-pallet-weight-reclaim = { version = "0.7.0", default-features = false }
cumulus-pallet-xcm = { version = "0.24.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.25.0", default-features = false }
cumulus-primitives-aura = { version = "0.21.0", default-features = false }
cumulus-primitives-core = { version = "0.23.0", default-features = false }
cumulus-primitives-utility = { version = "0.25.0", default-features = false }

# Polkadot
parachains-common = { version = "27.1.0", default-features = false }
polkadot-parachain-primitives = { version = "20.0.0", default-features = false }
polkadot-runtime-common = { version = "24.0.0", default-features = false }
staging-parachain-info = { version = "0.25.0", default-features = false }
staging-xcm = { version = "21.0.0", default-features = false }
staging-xcm-builder = { version = "25.0.0", default-features = false }
staging-xcm-executor = { version = "24.0.1", default-features = false }

# CLI dependencies
subxt = { version = "0.38" }
subxt-signer = { version = "0.38", features = ["sr25519", "subxt"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
